[Release] Rework + Fixed more issues with CommandAPI. [I do not think I have to touch this code ever again, so I can now work on the server] + Fixed various issues in order to make sure it passes sonarcloud's quality gate.